--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#4f46e5",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "LOGO_MP-removebg-preview - Copy.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "icon-512.png",
+      "src": "LOGO_MP-removebg-preview - Copy.png",
       "type": "image/png",
       "sizes": "512x512"
     }
